# kudos

./: .eslintignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yaml  changeset-status.json  jsconfig.json  package.json  pnpm-lock.yaml  postcss.config.cjs  readme.md  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.changeset/: add-distribution-endpoint.md  config.json  crisp-boxes-work.md  few-lilies-report.md  fix-missing-build.md  fix-oidc-publish.md  fix-workspace-publish.md  full-ravens-dream.md  include-dist-in-tarball.md  lovely-shrimps-fold.md  olive-lines-play.md  outbox-exponential-backoff.md  plain-planets-try.md  relax-subject-type.md  silent-lions-clean.md  smooth-spies-post.md  spotty-snails-joke.md  warm-mangos-add.md
.github/workflows/: html-files.yml  identify-contributors-basic.yml  kudos.yml  main.yml  release.yml
000-kudos-sketch/assets/: 000-overview.mmd
000-kudos-sketch/config/: header.md
apps/basic-pool-server/: .env.example  Dockerfile  package.json
commands/setler-cli/: kudos.yml  license  package.json  pnpm-lock.yaml  readme.md
core/keys/: changelog.md  index.js  package.json  pnpm-lock.yaml  readme.md
core/logging/: changelog.md  package.json  pnpm-lock.yaml
core/short-id/: package.json  pnpm-lock.yaml  readme.md
core/subject-hash/: .gitignore  changelog.md  index.js  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
docs/: POOL-SERVER-README.md  example-kudos.ndjson  google-appscript-kudos.ts
docs/protocol/: openapi.yaml
eslint-config-custom/: index.js  package.json
ident-agency/: .gitignore  package.json  pnpm-lock.yaml  readme.md  turbo.json
identity-wallet/: readme.md
identity-wallet/setler/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  postcss.config.cjs  readme.md  svelte.config.js  vite.config.js
identity-wallet/setler-cli/: changelog.md  license  package.json  pnpm-lock.yaml  readme.md
identity-wallet/www-setler-app/: package.json  pnpm-lock.yaml  readme.md  svelte.config.js  tailwind.config.js
kudos-community/: readme.md
kudos-community/www/: .env.example  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
kudos-for-code/: readme.md
kudos-for-code-action/: README.md  pnpm-lock.yaml
kudos-for-content/: LICENSE  README.md  package.json
pool-server/: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
rfcs/: LICENSE  readme.md
scripts/: connect-xrpl.js  createHdKeyFromMnemonic.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: app.html
src-tauri/: .config  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs
(+456 files in other folders)
